@@ -57,6 +57,7 @@ In APIs:
 In the Python package:
 * Hires Bounding Box detection in Mathematica plots
 * Location of config.py in configure.py 
+* Prevent segfault when the input file is closed prematurely.
 
 In programs:
 * Fixed sfpen (via dovplot) bug
